force-app/main/default/objects/salesRabbitSchedule__c/salesRabbitSchedule__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>this object is responsible of organize the schedules to update records in salesforce when some record in salesrabbit has been updated and delete some record in salesrabbit after some time.</description>
    <label>SalesRabbit Schedule</label>
</CustomObject>