force-app/main/default/objects/salesRabbitSchedule__c/fields/deleteAfter__c.field-meta.xml
<CustomField>
    <fullName>deleteAfter__c</fullName>
    <label>Delete After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>