force-app/main/default/objects/salesRabbitSchedule__c/fields/deleteAfterOptions__c.field-meta.xml
<CustomField>
    <fullName>deleteAfterOptions__c</fullName>
    <label>Delete After Options</label>
    <length>10</length>
    <type>Text</type>
</CustomField>