force-app/main/default/objects/salesRabbitSchedule__c/fields/knockCounter__c.field-meta.xml
<CustomField>
    <fullName>knockCounter__c</fullName>
    <label>Knock Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>