force-app/main/default/objects/salesRabbitSchedule__c/fields/last_update__c.field-meta.xml
<CustomField>
    <fullName>last_update__c</fullName>
    <label>last update</label>
    <type>DateTime</type>
</CustomField>