force-app/main/default/objects/salesRabbitSchedule__c/fields/maxSalePrice__c.field-meta.xml
<CustomField>
    <fullName>maxSalePrice__c</fullName>
    <label>maximun sale price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>