force-app/main/default/objects/salesRabbitSchedule__c/fields/minSalePrice__c.field-meta.xml
<CustomField>
    <fullName>minSalePrice__c</fullName>
    <label>minimum sale price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>