force-app/main/default/objects/salesRabbitSchedule__c/fields/options__c.field-meta.xml
<CustomField>
    <fullName>options__c</fullName>
    <label>Options</label>
    <length>15</length>
    <type>Text</type>
</CustomField>