force-app/main/default/objects/salesRabbitSchedule__c/fields/quantityDayOrHour__c.field-meta.xml
<CustomField>
    <fullName>quantityDayOrHour__c</fullName>
    <label>How often?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>