force-app/main/default/objects/salesRabbitSchedule__c/fields/token__c.field-meta.xml
<CustomField>
    <fullName>token__c</fullName>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>